# backup

./: .gitignore  CMakeLists.txt  LICENSE  README.md
backend/: CMakeLists.txt
backend/btrfs/: CMakeLists.txt  backup_descriptor.ice  btrfs_backend  btrfs_backend.cc  btrfs_backend.h  btrfs_backend_main.cc  btrfs_backend_service.ice  btrfs_backend_service.pb.cc  btrfs_backend_service.pb.h  btrfs_backend_service.proto  btrfs_backend_service_impl.cc  btrfs_backend_service_impl.h  btrfs_backup_set.cc  btrfs_backup_set.h  btrfs_storage_backend.cc  btrfs_storage_backend.h  file_formats.proto  status_impl.cc  status_impl.h
backend/btrfs/client/: CMakeLists.txt  btrfs_backup.cc  btrfs_backup.h  btrfs_backup_set.cc  btrfs_backup_set.h  btrfs_storage_backend.cc  btrfs_storage_backend.h
backend/btrfs/proto/: CMakeLists.txt  backup.ice  backup_descriptor.ice  backup_set.ice  btrfs_backend_service.ice  status.ice  status_impl.cc  status_impl.h
backend/btrfs/server/: CMakeLists.txt  backup.ice  backup_descriptor.ice  backup_impl.cc  backup_impl.h  backup_set.ice  backup_set_impl.cc  backup_set_impl.h  btrfs_backend_main.cc  btrfs_backend_service.ice  btrfs_backend_service_impl.cc  btrfs_backend_service_impl.h  global.h  sqlite.cc  sqlite.h  util.h
backend/btrfs/server/schemas/: CMakeLists.txt  schema.cc  schema.h  schema_version_1.cc  schema_version_1.h
backend/public/: CMakeLists.txt  backup.h  backup_set.h  file_list.cc  file_list.h  storage_backend.h
base/: ice.h  macros.h  string.h  types.h
client/: CMakeLists.txt
client/storage/: CMakeLists.txt
client/storage/btrfs/: CMakeLists.txt  btrfs_backup_set.h  btrfs_storage_backend.cc  btrfs_storage_backend.h
client/storage/public/: CMakeLists.txt  backup.h  backup_set.h  file_list.h  storage_backend.h
client/ui/: CMakeLists.txt
client/ui/cli/: CMakeLists.txt  cli_client  cli_client.cc  cli_client.h  cli_client_main.cc
meta/: FindCasock.cmake  FindGFlags.cmake  FindIce.cmake  FindSqlite3.cmake  LintRules.cmake  Slice2Cpp.cmake  cpplint.py
